# calculator

./: index.html  package-lock.json  package.json
docs/: README.md
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
