[package]
name = "calculator"
version = "0.1.0"
description = "Calculator app"
authors = ["youaremagic"]
license = "MIT"
repository = "https://github.com/youaremagic/calculator"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
